--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="./app.js" defer> </script>
     <title>Library</title>
 </head>
 <body>
+    <div class="add button">
+        <button id="add_book">Add Book</button>
+    </div>
+
+    <div class="libraryContents">
+        <table id="libraryTable">
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Pages</th>
+            </tr>
+        </table>
+    </div>
+
+    <form id="addBookForm">
+        <label for="title">What is the title of the book?</label>
+        <input type="text" id="title" />
+        <label for="author">Who is the author of the book?</label>
+        <input type="text" id="author" />
+        <label for="pages">How many pages does it have?</label>
+        <input type="number" id="pages" />
+        <!-- <label for="read">Have you read it?</label>
+        <input type="checkbox" name="read" value="true" id="read"> -->
+        <button id="submit" value="Submit">Submit</button>    
+      </form>
     
 </body>
 </html>
